package com.gerald.adapter;

/**
 * Created by Gerald_Yang on 2017/9/14.
 */
public interface RowingBoat {
  void row();
}
